more footer/propic/html edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -249,7 +249,7 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="card">
               <h4 class="card-header card-header-primary">A closer look at states
                 <a tabindex="0" class="fas fa-info-circle" data-toggle="tooltip" data-placement="right"
-                  title="State-specific data for mobility, daily new COVID cases, and monthly unemployment. Populates once a state is selected on the map. See mobility panel (below) for deatils on how to interpret."></a>
+                  title="State-specific data for mobility, daily new COVID cases, and monthly unemployment. Populates once a state is selected on the map. See mobility panel (below) on how to interpret."></a>
               </h4>
               <div class="card-body">
                 <p class="description">Select a state on the map to view more specific data.</p>
@@ -469,10 +469,10 @@ The above copyright notice and this permission notice shall be included in all c
           <p>Check out our other project, <b><a
               href="https://rmoesw01.github.io/Climateers/index.html" target='blank'>Climateers</a></b>!<br><br></p>
           <h5 class='text-uppercase'><b>Credits</b></h5>
-          <p><b>&copy;
+          <p>&copy;
             <script>
               document.write(new Date().getFullYear())
-            </script> hindsight</b>, template created by <b>
+            </script> hindsight, template created by <b>
             <a href="https://www.creative-tim.com/" target="blank">Creative Tim</a></b>.</p>
         </div>
       </div>
