restructure pres ratings graph code, misc. css/html edits

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -99,10 +99,7 @@ td {
   text-align: center;
 }
 
-/* img formatting for footer */
-/* footer img {
-  max-width: 75%;
-} */
+/* format for footer icons */
 
 footer i {
   padding-left: 5px;
