--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,7 @@ The above copyright notice and this permission notice shall be included in all c
   <div class="main main-raised">
     <div class='section'>
       <div class="container">
+        <!-- start top row -->
         <div class='row'>
           <div class='col col-12 col-lg-5'>
             <!-- start carousel card -->
@@ -204,13 +205,15 @@ The above copyright notice and this permission notice shall be included in all c
             <!-- end approval ratings card -->
           </div>
         </div>
+        <!-- end top row -->
+        <!-- start second row -->
         <div class='row'>
           <div class='col col-12 col-lg-8'>
             <!-- start map card -->
             <div class="card">
               <h4 class="card-header card-header-primary">Wildfires & social unrest: a look at the country today
                 <span id='map-tooltip'>
-                  <a class="fas fa-info-circle" data-toggle="tooltip" data-container='#map-tooltip'
+                  <a tabindex="0" class="fas fa-info-circle" data-toggle="tooltip" data-container='#map-tooltip'
                     data-placement="right"
                     title="Overview of active fires, contained fires, and protests across the nation on selected date. Numerical counts for the nation and state (if selected) available in table below. Toggle layers via the legend at the upper-right corner."></a>
                 </span>
@@ -269,9 +272,10 @@ The above copyright notice and this permission notice shall be included in all c
             <!-- end state card -->
           </div>
         </div>
+        <!-- end second row -->
+        <!-- start third row -->
         <div class='row'>
           <div class='col col-12 col-lg-7'>
-            <br>
             <!-- start US COVID card -->
             <div class="card card-nav-tabs">
               <div class="card-header card-header-primary">
