update covid change fxn

--- a/static/css/material-kit.css
+++ b/static/css/material-kit.css
@@ -18197,12 +18197,12 @@ footer .pull-center {
 }
 
 .slider .noUi-connect {
-  background-color: #2980B9;
+  background-color: #607D8B;
   border-radius: 4px;
 }
 
 .slider .noUi-handle {
-  border-color: #2980B9;
+  border-color: #607D8B;
 }
 
 .slider.slider-info .noUi-connect {
