--- a/templates/index.html
+++ b/templates/index.html
@@ -455,7 +455,7 @@ The above copyright notice and this permission notice shall be included in all c
               <h4>Amber
                 <span class='float-right'>
                   <a href="https://github.com/apizzo1" target="_blank"><i class="fab fa-github"></i></a>
-                  <a href="https://www.linkedin.com/in/amber-l-pizzo/ target="_blank"><i
+                  <a href="https://www.linkedin.com/in/amber-l-pizzo/" target="_blank"><i
                       class="fab fa-linkedin"></i></a>
                 </span></h4>
               <img src="../static/img/propics/amber_square.png" alt="maria" class='img-raised rounded img-fluid'>
