misc. html edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -325,8 +325,7 @@ The above copyright notice and this permission notice shall be included in all c
             <!-- end US COVID card -->
           </div>
           <div class='col col-12 col-lg-5'>
-            <br>
-            <!-- start mobility card, **or we could put it in the COVID navtabs** -->
+            <!-- start mobility card -->
             <div class="card">
               <h4 class="card-header card-header-primary">Mobility across the nation
                 <a tabindex="0" class="fas fa-info-circle" data-toggle="tooltip" data-placement="right"
@@ -434,7 +433,7 @@ The above copyright notice and this permission notice shall be included in all c
                 </span>
               </h4>
               <img src="../static/img/propics/ryan_square.png" alt="ryan" class='img-raised rounded img-fluid'>
-              <p><br>Data Engineer and Business Developer.
+              <p><br>Data engineer and business developer.
                 Sports fanatic.<br><br></p>
             </div>
             <!-- rebecca -->
@@ -446,7 +445,7 @@ The above copyright notice and this permission notice shall be included in all c
                       class="fab fa-linkedin"></i></a>
                 </span></h4>
               <img src="../static/img/propics/becki_square.png" alt="becki" class='img-raised rounded img-fluid'>
-              <p><br>Data Engineer and Teacher.
+              <p><br>Data engineer and teacher.
                 Interested in reasearch science and quality data roles.
                 Loves all kinds of puzzles.<br><br></p>
             </div>
@@ -459,7 +458,7 @@ The above copyright notice and this permission notice shall be included in all c
                       class="fab fa-linkedin"></i></a>
                 </span></h4>
               <img src="../static/img/propics/amber_square.png" alt="maria" class='img-raised rounded img-fluid'>
-              <p><br>Quality Engineer and data analyst.
+              <p><br>Quality engineer and data analyst.
                 Interested in product quality roles. <br>
                 LEGO enthusiast.<br><br></p>
             </div>
