edit index & readme descriptions, covid graph positioning

--- a/templates/index.html
+++ b/templates/index.html
@@ -329,7 +329,7 @@ The above copyright notice and this permission notice shall be included in all c
             <div class="card">
               <h4 class="card-header card-header-primary">Mobility across the nation
                 <a tabindex="0" class="fas fa-info-circle" data-toggle="tooltip" data-placement="right"
-                  title="Graph that compares national data on movement to baseline measurements in January and February 2020. Data from Google (?). Hover over graph for more details."></a>
+                  title="Graph that compares national data on movement to baseline measurements in January and February 2020. Data from Opportunity Insights Economic Tracker. Hover over graph for more details."></a>
               </h4>
               <div class="card-body">
                 <p class="description">How has COVID impacted everday movement? Available for dates after February 24,
@@ -384,7 +384,7 @@ The above copyright notice and this permission notice shall be included in all c
                 <span id='unemp-tooltip'>
                   <a tabindex="0" class="fas fa-info-circle" data-toggle="tooltip" data-container='#unemp-tooltip'
                     data-placement="right"
-                    title="Graph that compares prices of up to three select stocks (via dropdown menus) over time. Data from finnhub.io. Hover over the graph to view numerical values."></a>
+                    title="Graph that shows monthly national unemployment rates. Data from U.S. Bureau of Labor Statistics. Hover over the graph to view numerical values. Toggle demographic comparisons in legend below."></a>
                 </span>
               </h4>
               <div class="card-body">
@@ -467,7 +467,7 @@ The above copyright notice and this permission notice shall be included in all c
         <div class='col-12 col-lg-3'>
           <h5 class='text-uppercase'><b>Questions?</b></h5>
           <p>Explore our <b><a href="https://github.com/apizzo1/Hindsight_2020" target='blank'>GitHub repository</a></b>, or feel free to
-            reach out and connect with the team.<br><br></p>
+            reach out and connect with the team via our individual links.<br><br></p>
           <h5 class='text-uppercase'><b>Want to see more?</b></h5>
           <p>Check out our other project, <b><a
               href="https://rmoesw01.github.io/Climateers/index.html" target='blank'>Climateers</a></b>!<br><br></p>
